--- a/pom.xml
+++ b/pom.xml
@@ -72,18 +72,22 @@
         <camel.version>2.14.0</camel.version>
         <cdi.version>1.2</cdi.version>
         <deltaspike.version>1.1.0</deltaspike.version>
-        <exec-maven-plugin-version>1.3.2</exec-maven-plugin-version>
         <javaee.version>7.0</javaee.version>
         <slf4j.version>1.7.7</slf4j.version>
         <weld.version>2.2.6.Final</weld.version>
         <owb.version>1.5.0-SNAPSHOT</owb.version>
-        <wildfly.version>8.1.0.Final</wildfly.version>
+        <wildfly.version>8.2.0.Final</wildfly.version>
         <arquillian.version>1.1.5.Final</arquillian.version>
         <arquillian-osgi.version>2.1.0.CR18</arquillian-osgi.version>
         <arquillian.weld.version>1.0.0.CR8</arquillian.weld.version>
         <shrinkwrap.resolver.version>2.1.1</shrinkwrap.resolver.version>
         <shrinkwrap.descriptors.version>2.0.0-alpha-6</shrinkwrap.descriptors.version>
+
+        <!-- Maven Plugins -->
+        <maven-exec-plugin-version>1.3.2</maven-exec-plugin-version>
         <maven-bundle-plugin.version>2.3.7</maven-bundle-plugin.version>
+        <maven-wildfly-plugin.version>1.0.2.Final</maven-wildfly-plugin.version>
+        <maven-jetty-plugin.version>9.3.0.M1</maven-jetty-plugin.version>
     </properties>
 
     <modules>
@@ -101,7 +105,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
-                    <version>${exec-maven-plugin-version}</version>
+                    <version>${maven-exec-plugin-version}</version>
                 </plugin>
 
                 <plugin>
@@ -252,7 +256,7 @@
             <dependency>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>${exec-maven-plugin-version}</version>
+                <version>${maven-exec-plugin-version}</version>
             </dependency>
 
             <!-- test dependencies -->
