--- a/quickstarts/simplecontextname/src/main/webapp-jetty/WEB-INF/web.xml
+++ b/quickstarts/simplecontextname/src/main/webapp-jetty/WEB-INF/web.xml
@@ -6,8 +6,11 @@
 
     <display-name>Simple Context Name</display-name>
 
-    <listener>
+<!--    <listener>
         <listener-class>org.jboss.weld.environment.servlet.BeanManagerResourceBindingListener</listener-class>
+    </listener>-->
+    <listener>
+        <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
     </listener>
 
     <resource-env-ref>
