Add <packageExcludes> option to exclude this jar from the lib directory - jboss-el-api_3.0_spec-1.0.0.Alpha1.jar. But still there. To be investigated

--- a/quickstarts/pom.xml
+++ b/quickstarts/pom.xml
@@ -359,6 +359,9 @@
                                     <filtering>false</filtering>
                                 </resource>
                             </webResources>
+                            <packagingExcludes>
+                                WEB-INF/lib/jboss-el-api*.jar
+                            </packagingExcludes>
                         </configuration>
                     </plugin>
                 </plugins>
