Add standalone profile (does not work), remove dependencies from examples - simplecontext. Fix the issues about too many weld jars

--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,13 @@
     <dependencyManagement>
         <dependencies>
 
+            <!-- Project -->
+            <dependency>
+                <groupId>io.astefanutti.camel.cdi</groupId>
+                <artifactId>camel-cdi</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
             <!-- compile dependencies -->
 
             <dependency>
