--- a/quickstarts/pom.xml
+++ b/quickstarts/pom.xml
@@ -107,6 +107,66 @@
 
     <profiles>
         <profile>
+            <id>standalone</id>
+            <properties>
+                <packaging.type>jar</packaging.type>
+            </properties>
+            <dependencies>
+                <!-- Camel -->
+                <dependency>
+                    <groupId>org.apache.camel</groupId>
+                    <artifactId>camel-core</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>io.astefanutti.camel.cdi</groupId>
+                    <artifactId>camel-cdi</artifactId>
+                </dependency>
+
+                <!-- Java EE API -->
+                <dependency>
+                    <groupId>javax</groupId>
+                    <artifactId>javaee-api</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.spec.javax.el</groupId>
+                    <artifactId>jboss-el-api_3.0_spec</artifactId>
+                </dependency>
+
+                <!-- Weld2 -->
+                <dependency>
+                    <groupId>org.jboss.weld.servlet</groupId>
+                    <artifactId>weld-servlet</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.weld.se</groupId>
+                    <artifactId>weld-se-core</artifactId>
+                </dependency>
+<!--                <dependency>
+                    <groupId>org.jboss.weld.se</groupId>
+                    <artifactId>weld-se-core</artifactId>
+                </dependency>-->
+<!--                <dependency>
+                    <groupId>org.jboss.weld</groupId>
+                    <artifactId>weld-spi</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.weld</groupId>
+                    <artifactId>weld-core-impl</artifactId>
+                </dependency>-->
+
+                <!-- Logging -->
+                <dependency>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
             <id>bundle</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
@@ -211,25 +271,20 @@
 
                 <!-- Weld2 -->
                 <dependency>
-                    <groupId>org.jboss.weld.se</groupId>
-                    <artifactId>weld-se-core</artifactId>
-                    <scope>runtime</scope>
-                </dependency>
-                <dependency>
                     <groupId>org.jboss.weld.servlet</groupId>
                     <artifactId>weld-servlet</artifactId>
+                    <scope>runtime</scope>
+                </dependency>
+                <!--<dependency>
+                    <groupId>org.jboss.weld.se</groupId>
+                    <artifactId>weld-se-core</artifactId>
                     <scope>runtime</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.jboss.weld</groupId>
                     <artifactId>weld-core-impl</artifactId>
                     <scope>runtime</scope>
-                </dependency>
-                <dependency>
-                    <groupId>org.jboss.weld.servlet</groupId>
-                    <artifactId>weld-servlet</artifactId>
-                    <scope>runtime</scope>
-                </dependency>
+                </dependency>-->
 
                 <!-- Jetty -->
                 <dependency>
@@ -245,6 +300,16 @@
                     <version>1.1-SNAPSHOT</version>
                     <type>war</type>
                 </dependency>
+
+                <!-- Camel -->
+                <dependency>
+                    <groupId>org.apache.camel</groupId>
+                    <artifactId>camel-core</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>io.astefanutti.camel.cdi</groupId>
+                    <artifactId>camel-cdi</artifactId>
+                </dependency>
             </dependencies>
             <build>
                 <plugins>
@@ -253,11 +318,11 @@
                         <groupId>org.eclipse.jetty</groupId>
                         <artifactId>jetty-maven-plugin</artifactId>
                         <version>${maven-jetty-plugin.version}</version>
-                        <configuration>
+  <!--                      <configuration>
                             <webApp>
                                 <jettyEnvXml>src/main/webapp/WEB-INF/jetty-env.xml</jettyEnvXml>
                             </webApp>
-                        </configuration>
+                        </configuration>-->
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
