Fixed issues. Works with mvn exec:java, camel:run but still fails with jetty:run (even if only weld-servlet is deployed)

--- a/quickstarts/simplecontextname/pom.xml
+++ b/quickstarts/simplecontextname/pom.xml
@@ -36,8 +36,10 @@
         <example.main.class>org.apache.camel.cdi.example1.BootStrap</example.main.class>
     </properties>
 
-    <dependencies>
-        <!-- Camel -->
+
+
+<!--    <dependencies>
+        &lt;!&ndash; Camel &ndash;&gt;
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
@@ -49,16 +51,16 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- Weld2 -->
+        &lt;!&ndash; Weld2 &ndash;&gt;
         <dependency>
             <groupId>org.jboss.weld.se</groupId>
             <artifactId>weld-se</artifactId>
-            <!-- This dependency is only used for compilation & not
-                 at all for running example using maven plugins -->
+            &lt;!&ndash; This dependency is only used for compilation & not
+                 at all for running example using maven plugins &ndash;&gt;
             <scope>provided</scope>
         </dependency>
 
-        <!-- Logging -->
+        &lt;!&ndash; Logging &ndash;&gt;
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
@@ -69,6 +71,6 @@
             <artifactId>log4j</artifactId>
             <scope>provided</scope>
         </dependency>
-    </dependencies>
+    </dependencies>-->
 
 </project>
