Exclude jetty jar files not required within the WAR

--- a/quickstarts/pom.xml
+++ b/quickstarts/pom.xml
@@ -288,6 +288,12 @@
                     <groupId>org.eclipse.jetty</groupId>
                     <artifactId>jetty-servlet</artifactId>
                     <version>${maven-jetty-plugin.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>*</groupId>
+                            <artifactId>*</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
 
                 <!-- Logging / scope runtime added otherwise
